--- a/public/assets/stylesheets/less/header.less
+++ b/public/assets/stylesheets/less/header.less
@@ -16,18 +16,19 @@
     .flex();
     .flex-direction-row();
     .flex-wrap(nowrap);
-    .flex-justify-content(space-between);
+    .flex-justify-content(flex-start);
 
     .translate(0, 0) !important; // We need !important due to the horizontal scroll handler
     position: fixed;
     top: 0px;
     z-index: 10000;
 
-    #barBottomLeft,
-    #barTopFont {
-        padding: 0px 15px;
-        z-index: 2;
-    }
+}
+#barBottomLeft,
+#barTopFont {
+    .flex-item(0, 0, auto);
+    padding: 0px 15px;
+    z-index: 2;
 }
 
 
@@ -56,6 +57,8 @@
 }
 
 #barBottomright {
+    .flex-item(0, 1, auto);
+    justify-self: flex-end;
     > ul {
         display: flex;
         align-items: center;
@@ -138,13 +141,12 @@
 }
 
 #barTopFont {
+    .flex-item(1);
     color: @white;
     margin-left: 0px;
     z-index: 1002;
-    position: absolute;
-    left: 88px;
-    top: 0px;
     line-height: @bar-bottom-container-height;
+    white-space: nowrap;
 }
 
 .studip-logo {
