--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -2048,8 +2048,8 @@ form.default label.packed button {
   -webkit-flex-wrap: nowrap;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
   -webkit-transform: translate(0, 0) !important;
   -moz-transform: translate(0, 0) !important;
   -ms-transform: translate(0, 0) !important;
@@ -2059,8 +2059,13 @@ form.default label.packed button {
   top: 0px;
   z-index: 10000;
 }
-#barBottomContainer #barBottomLeft,
-#barBottomContainer #barTopFont {
+#barBottomLeft,
+#barTopFont {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  -moz-box-flex: 0;
+  flex: 0 0 auto;
   padding: 0px 15px;
   z-index: 2;
 }
@@ -2084,6 +2089,14 @@ form.default label.packed button {
 }
 #layout_footer > ul > li {
   margin: 2px;
+}
+#barBottomright {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 1 auto;
+  -ms-flex: 0 1 auto;
+  -moz-box-flex: 0;
+  flex: 0 1 auto;
+  justify-self: flex-end;
 }
 #barBottomright > ul {
   display: flex;
@@ -2155,13 +2168,16 @@ form.default label.packed button {
   align-items: center;
 }
 #barTopFont {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  -moz-box-flex: 1;
+  flex: 1;
   color: #fff;
   margin-left: 0px;
   z-index: 1002;
-  position: absolute;
-  left: 88px;
-  top: 0px;
   line-height: 40px;
+  white-space: nowrap;
 }
 .studip-logo {
   font: 0/0 a;
@@ -10555,6 +10571,7 @@ div.i18n_group > div.i18n .cktoolbar .cke_inner {
 #globalsearch-searchbar {
   position: relative;
   top: 4px;
+  white-space: nowrap;
 }
 #globalsearch-searchbar > * {
   -webkit-box-sizing: border-box;
@@ -10571,7 +10588,6 @@ div.i18n_group > div.i18n .cktoolbar .cke_inner {
   -moz-transition: opacity 300ms;
   -o-transition: opacity 300ms;
   transition: opacity 300ms;
-  z-index: 100;
 }
 #globalsearch-searchbar.has-value #globalsearch-clear {
   opacity: 1;
@@ -10778,7 +10794,6 @@ div.i18n_group > div.i18n .cktoolbar .cke_inner {
   -webkit-flex-wrap: nowrap;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
-  flex: auto;
   margin: 0;
   max-width: 100%;
 }
@@ -10804,7 +10819,6 @@ div.i18n_group > div.i18n .cktoolbar .cke_inner {
   max-width: calc(100% - 100px);
   overflow: hidden;
   padding-right: 6px;
-  word-wrap: break-word;
 }
 #globalsearch-searchbar #globalsearch-results article section .globalsearch-result-data .globalsearch-result-title {
   font-size: 14px;
@@ -10815,12 +10829,12 @@ div.i18n_group > div.i18n .cktoolbar .cke_inner {
   font-size: 12px;
 }
 #globalsearch-searchbar #globalsearch-results article section .globalsearch-result-time {
+  color: #636971;
   -webkit-box-flex: 0;
   -webkit-flex: 0;
   -ms-flex: 0;
   -moz-box-flex: 0;
   flex: 0;
-  color: #636971;
   font-size: 11px;
   font-weight: normal;
   text-align: right;
@@ -10848,6 +10862,61 @@ div.i18n_group > div.i18n .cktoolbar .cke_inner {
 }
 #globalsearch-searchbar #globalsearch-results article mark {
   background-color: #d0d7e3;
+}
+html.responsive-display #quicksearch_item {
+  -webkit-align-self: center;
+  -ms-align-self: center;
+  align-self: center;
+}
+html.responsive-display #globalsearch-searchbar {
+  position: static;
+  top: 0;
+}
+html.responsive-display #globalsearch-searchbar #globalsearch-input {
+  width: 100%;
+}
+html.responsive-display #globalsearch-searchbar #globalsearch-icon {
+  left: calc(100% - 16px);
+  margin-left: 0;
+}
+html.responsive-display #globalsearch-searchbar #globalsearch-list {
+  position: absolute;
+  left: 5px;
+  top: calc(40px + 5px);
+  width: calc(100vw - (2 * 5px));
+}
+html.responsive-display #globalsearch-searchbar #globalsearch-clear {
+  opacity: 1;
+}
+html.responsive-display:not(.globalsearch-visible) #globalsearch-list,
+html.responsive-display:not(.globalsearch-visible) #globalsearch-clear {
+  display: none;
+}
+html.responsive-display.globalsearch-visible #barBottomright ul li {
+  display: none;
+}
+html.responsive-display.globalsearch-visible #barBottomright ul li:first-child,
+html.responsive-display.globalsearch-visible #barBottomright ul #quicksearch_item,
+html.responsive-display.globalsearch-visible #barBottomright ul #sidebar-menu {
+  display: initial;
+}
+html.responsive-display.globalsearch-visible .helpbar {
+  z-index: 0;
+}
+html.responsive-display.globalsearch-visible #layout_page {
+  position: relative;
+  filter: blur(1px);
+}
+html.responsive-display.globalsearch-visible #layout_page::before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  left: -1px;
+  background: rgba(40, 73, 124, 0.5);
+  z-index: 1;
 }
 #responsive-container {
   display: none;
@@ -11040,7 +11109,7 @@ label[for="responsive-toggle"]::before {
 #barBottomright #sidebar-menu {
   cursor: pointer;
   display: none;
-  margin: 0 5px;
+  margin: 0 2px;
   vertical-align: top;
 }
 #barBottomright #sidebar-menu::before {
@@ -11284,21 +11353,6 @@ label[for="responsive-toggle"]::before {
   opacity: 1;
   max-width: 1000px;
   width: 100% !important;
-}
-.responsive-display #globalsearch-searchbar #globalsearch-input {
-  max-width: 50%;
-  position: fixed;
-  left: 50px;
-  top: 5px;
-}
-.responsive-display #globalsearch-searchbar #globalsearch-icon {
-  left: calc(100% - 15px);
-  top: 7px;
-}
-.responsive-display #globalsearch-searchbar #globalsearch-list {
-  width: 100vw;
-  left: -181px;
-  top: 28px;
 }
 .responsive-display #barBottomright ul li:first-child {
   -webkit-box-flex: 1;
