fix responsive navigation position, re #8362

--- a/public/assets/stylesheets/less/navigation.less
+++ b/public/assets/stylesheets/less/navigation.less
@@ -252,7 +252,8 @@ body.fixed {
 
         list-style: none;
         margin: 0px 0px 0px -15px;
-        padding: 0px 0px 0px 0px;
+        padding: 0px;
+        position: absolute;
 
         width: -moz-fit-content;
         width: -webkit-fit-content;
