apply patch for styling of lists, fixes #7565

--- a/public/assets/stylesheets/less/content.less
+++ b/public/assets/stylesheets/less/content.less
@@ -53,3 +53,14 @@
   border: 1px solid rgba(0, 0, 0, 0.5);
   padding: 0 0.5ex;
 }
+
+// Margin for lists in user content 
+.formatted-content ul,
+.formatted-content ol  {
+  margin: 0.5em 0;
+  ul,
+  ol {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
