--- a/public/assets/stylesheets/wysiwyg.css
+++ b/public/assets/stylesheets/wysiwyg.css
@@ -159,3 +159,16 @@ a.cke_mathjax_doc[href] {
   line-height: normal;
   vertical-align: middle;
 }
+
+/* Margin for lists */
+.cke_wysiwyg_div ul,
+.cke_wysiwyg_div ol {
+  margin: 0.5em 0;
+}
+.cke_wysiwyg_div ul ul,
+.cke_wysiwyg_div ol ul,
+.cke_wysiwyg_div ul ol,
+.cke_wysiwyg_div ol ol {
+  margin-top: 0;
+  margin-bottom: 0;
+}
