apply and adjust patch and align icons across views, re #7734

--- a/public/assets/stylesheets/less/raumzeit.less
+++ b/public/assets/stylesheets/less/raumzeit.less
@@ -89,8 +89,7 @@ div.at_least_one_teacher {
     }
 }
 
-.flex-row {
-    .flex();
-    .flex-justify-content(space-between);
-    width: 100%;
+.times-rooms-grid .selectbox input[type="radio"]:checked + label {
+    font-weight: bold;
+    text-decoration: underline;
 }
