--- a/public/assets/stylesheets/less/forms.less
+++ b/public/assets/stylesheets/less/forms.less
@@ -276,4 +276,7 @@ form.default {
     &:checked + label {
         .icon('before', 'checkbox-checked', 'clickable', 16, 5px);
     }
+    &:indeterminate + label {
+        .icon('before', 'checkbox-indeterminate', 'clickable', 16, 5px);
+    }
 }
