--- a/public/assets/stylesheets/print.less
+++ b/public/assets/stylesheets/print.less
@@ -277,3 +277,7 @@ a.link-extern {
   .background-icon('link-extern', 'clickable');
   background-repeat: no-repeat;
 }
+
+.formatted-content {
+  display: inline;
+}
