--- a/public/assets/stylesheets/less/sidebar.less
+++ b/public/assets/stylesheets/less/sidebar.less
@@ -126,6 +126,23 @@ div#sidebar-navigation {
             }
         }
     }
+
+    .link-form {
+        display: inline-block;
+
+        button {
+            background: transparent;
+            border: 0;
+            color: @base-color;
+            margin: 0;
+            padding: 0;
+
+            &:hover {
+                color: @active-color;
+                cursor: pointer;
+            }
+        }
+    }
 }
 
 .sidebar-widget-cloud {
