--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -3001,6 +3001,20 @@ div#sidebar-navigation div.sidebar-widget-content {
 .widget-links.sidebar-views > li.active:after {
   border-left-width: 8px;
 }
+.widget-links .link-form {
+  display: inline-block;
+}
+.widget-links .link-form button {
+  background: transparent;
+  border: 0;
+  color: #28497c;
+  margin: 0;
+  padding: 0;
+}
+.widget-links .link-form button:hover {
+  color: #d60000;
+  cursor: pointer;
+}
 .sidebar-widget-cloud {
   margin: 0px;
   padding: 0px;
