--- a/public/assets/stylesheets/style.less
+++ b/public/assets/stylesheets/style.less
@@ -302,10 +302,28 @@ div.overdiv {
 .plugin_image {
     text-align: center;
     width: 88px;
+    vertical-align: top;
 }
 
 .plugin_score   { white-space: nowrap; }
 .plugin_install { text-align: center; }
+
+.plugin_description {
+    max-height: 15em;
+    overflow: hidden;
+    position: relative;
+
+    p.read_more {
+         position: absolute;
+         bottom: 0;
+         left: 0;
+         width: 100%;
+         text-align: center;
+         margin: 0;
+         padding: 10px 0;
+         background-image: linear-gradient(to bottom, transparent, white)
+    }
+}
 
 img.plugin_preview {
     height: 60px;
