--- a/public/assets/stylesheets/less/avatar.less
+++ b/public/assets/stylesheets/less/avatar.less
@@ -1,3 +1,5 @@
+@import (inline) '../vendor/cropper.css';
+
 /* --- Avatars of users, courses and institutes ----------------------------- */
 .avatar-small {
     vertical-align: middle;
@@ -38,9 +40,9 @@ div.avatar-widget {
         .transition(opacity .5s ease-in-out);
         background-color: ~"@{base-color}aa";
         opacity: 0;
-        height: 250px;
+        height: 260px;
         left: 0;
-        margin: 5px 0;
+        margin: 0;
         padding-left: 10px;
         padding-right: 10px;
         position: absolute;
@@ -76,5 +78,30 @@ div.avatar-widget {
 div#avatar {
     img {
         max-width: 100%;
+    }
+}
+
+form.settings-avatar {
+    div {
+        &#avatar-preview {
+            margin-left: auto;
+            margin-right: auto;
+            width: 550px;
+
+            img#new-avatar {
+                max-height: 90%;
+                max-width: 90%;
+                width: 550px;
+            }
+        }
+
+        &#avatar-buttons {
+            background-color: @light-gray-color-20;
+            width: 540px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 5px;
+            text-align: center;
+        }
     }
 }
