change order of selectors so that iless won't choke on that anymore and reenable verbose error messages, fixes #8497

--- a/public/assets/stylesheets/less/globalsearch.less
+++ b/public/assets/stylesheets/less/globalsearch.less
@@ -308,9 +308,9 @@ html.responsive-display {
             li {
                 display: none;
             }
-            li:first-child,
             #quicksearch_item,
-            #sidebar-menu {
+            #sidebar-menu,
+            li:first-child {
                 display: initial;
             }
         }
