give disabled links p proper styling, re #8521

--- a/public/assets/stylesheets/less/sidebar.less
+++ b/public/assets/stylesheets/less/sidebar.less
@@ -83,7 +83,7 @@ div#sidebar-navigation {
         line-height: 16px;
     }
     span[disabled] {
-        text-decoration: line-through;
+        color: @dark-gray-color-80;
     }
     &.sidebar-navigation > li.active {
         background-color: @base-color;
