display inactive links in sidebar thinner and use not-allowed cursor, re #8521

--- a/public/assets/stylesheets/less/sidebar.less
+++ b/public/assets/stylesheets/less/sidebar.less
@@ -84,6 +84,8 @@ div#sidebar-navigation {
     }
     span[disabled] {
         color: @dark-gray-color-80;
+        cursor: not-allowed;
+        font-weight: lighter;
     }
     &.sidebar-navigation > li.active {
         background-color: @base-color;
